kubernetes/flux-system/app/receiver-httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: flux-system
  name: webhook-receiver
spec:
  parentRefs:
    - namespace: kube-system
      name: cilium-default
      sectionName: https
  hostnames:
    - "flux.timtor.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: webhook-receiver
          port: 80
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: flux-system
  name: webhook-receiver-http-redirect
spec:
  parentRefs:
    - namespace: kube-system
      name: cilium-default
      sectionName: http
  hostnames:
    - "flux.timtor.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
